--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </nav>
         </header>
-        
+
         <!-- header ends -->
 
         <!-- banner starts -->
@@ -88,26 +88,25 @@
         </div>
 
         <div class="form mobile">
-                    <form action>
-                        <div class="select-top">
-                            <select name id>
-                                <option value>Book a Shortlet</option>
-                                <option value>Search for Property</option>
-                                <option value>List a Property</option>
-                            </select>
-                        </div>
-                        <div class="select-bottom">
-                            <select name id>
-                                <option value>Choose Location</option>
-                                <option value>Lagos</option>
-                                <option value>Abuja</option>
-                                <option value>Ibadan</option>
-                            </select>
-                        </div>
-                        <div> <button class="submit-btn">Book a
-                                shortlet</button></div>
-                    </form>
+            <form action>
+                <div class="select-top">
+                    <select name id>
+                        <option value>Book a Shortlet</option>
+                        <option value>Search for Property</option>
+                        <option value>List a Property</option>
+                    </select>
                 </div>
+                <div class="select-bottom">
+                    <select name id>
+                        <option value>Choose Location</option>
+                        <option value>Lagos</option>
+                        <option value>Abuja</option>
+                        <option value>Ibadan</option>
+                    </select>
+                </div>
+                <div> <button class="submit-btn">Book shortlet</button></div>
+            </form>
+        </div>
 
         <!-- banner ends -->
 
@@ -140,7 +139,7 @@
         <!-- section 1 ends -->
 
         <!-- mission starts -->
-<!-- 
+        <!-- 
         <div class="mission">
             <div class="mission-ctn">
                 <div class="mission-img">
@@ -214,7 +213,7 @@
             </div>
         </div> -->
         <!-- listing ends -->
-<!-- 
+        <!-- 
         <footer>
             <div class="footer-ctn">
                 <div class="logo-area">
