--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <!-- section 1 starts -->
 
-        <!-- <div class="sec1-ctn">
+        <div class="sec1-ctn">
             <div class="sec1-image">
                 <img src="image/sec1.jpeg" alt>
             </div>
@@ -134,12 +134,12 @@
                     Business Advisory & Development, Marketing & Sales, core
                     Real Estate services, Project Management, Construction.</p>
             </div>
-        </div> -->
+        </div>
 
         <!-- section 1 ends -->
 
         <!-- mission starts -->
-        <!-- 
+        
         <div class="mission">
             <div class="mission-ctn">
                 <div class="mission-img">
@@ -161,13 +161,13 @@
                     ensure customer satisfaction and delivery-on-promise for
                     every assignment/engagement.</p>
             </div>
-        </div> -->
+        </div>
 
         <!-- mission ends -->
 
         <!-- listing starts -->
 
-        <!-- <div class="view">
+        <div class="view">
             <h3 class="head">Most viewed listing</h3>
             <div class="listing">
                 <div class="list-ctn">
@@ -211,7 +211,8 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
+        
         <!-- listing ends -->
         <!-- 
         <footer>
