--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- listing ends -->
-        <!-- 
+        
         <footer>
             <div class="footer-ctn">
                 <div class="logo-area">
@@ -274,6 +274,6 @@
                     Privacy policy | Terms & Condition
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </body>
 </html>
