--- a/support.html
+++ b/support.html
@@ -116,7 +116,7 @@
         <!-- contact form starts -->
         <div class="container">
             <div class="row contact">
-                <div class="col-lg-8 col-md-7 fm">
+                <div class="col-lg-6 col-md-5 fm">
                     <h1>Contact Us</h1><br>
                     <p>fill the form below to send us a message</p><br>
                     <form action="post">
@@ -131,34 +131,142 @@
                     </form>
                     <a href="index">Submit</a>
                 </div>
-                <div class="col-lg-4 col-md-5">
-                    <img src="image/map-back.png" alt>
+                <div class="col-lg-6 col-md-7 map">
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253682.62283124574!2d3.28395955!3d6.548055099999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b2ae68280c1%3A0xdc9e87a367c3d9cb!2sLagos!5e0!3m2!1sen!2sng!4v1750932768532!5m2!1sen!2sng" width="400" height="480" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                   <!-- <img src="image/map-back.png" alt="" class="img-fluid"> -->
                 </div>
             </div>
         </div>
 
-        <!-- <div class="container mid-sec">
-            <div class="mid">
-                <div class="bi bi-geo-alt-fill icon"></div>
-                <div>
-                    7A Oko Awo Street,<br>
-                    Off Adetokunbo Ademola Street,<br>
-                    Victoria Island, Lagos.
+        <div class=" mid-sec">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-lg-4 mid">
+                        <div class="bi bi-geo-alt-fill icon"></div>
+                        <div>
+                            7A Oko Awo Street,<br>
+                            Off Adetokunbo Ademola Street,<br>
+                            Victoria Island, Lagos.
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-lg-4 mid br">
+                        <div class="bi bi-telephone-fill icon"></div>
+                        <div>
+                            +234 812 155 3959 <br>
+                            +234 908 647 7777
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-lg-4 mid">
+                        <div class="bi bi-envelope-fill icon"></div>
+                        <div>
+                            info@miter.org
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="mid">
-                <div class="bi bi-telephone-fill icon"></div>
-                <div>
-                    +234 812 155 3959 <br>
-                    +234 908 647 7777
+        </div>
+
+        <footer>
+            <div class="footer-ctn">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 logo-area">
+                            <img src="image/logonameremoved.png" alt><br>
+                            <p>Miter caters to establishments and individuals,
+                                with
+                                a collective team experience spanning over a
+                                decade
+                                across Business Advisory & Development,
+                                Marketing &
+                                Sales, core Real Estate services, Project
+                                Management, Construction, and Legal
+                                services.</p>
+                        </div>
+                        <div class="col-lg-3 list1">
+                            <ul>
+                                <li class="bold">Services</li>
+                                <li><a href="index"><i
+                                            class="bi bi-plus"></i>Short
+                                        Term
+                                        Rentals</a></li>
+                                <li><a href="index"><i
+                                            class="bi bi-plus"></i>Property
+                                        Acquisitions & Sales</a></li>
+                                <li><a href="index"><i
+                                            class="bi bi-plus"></i>Property
+                                        Lettings and Leasing</a></li>
+                                <li><a href="index"><i
+                                            class="bi bi-plus"></i>Real
+                                        Estate Advisory</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 list1">
+                            <ul>
+                                <li class="bold">Shortlet</li>
+                                <li><a href><i class="bi bi-plus"></i>Oko Awo,
+                                        VI,
+                                        Lagos</a></li>
+                                <li><a href><i class="bi bi-plus"></i>Asokoro,
+                                        Abuja</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 ft-info">
+                            <p class="bold">Get in touch</p>
+                            <div class="ft-info1">
+                                <div class="row">
+                                    <div class="col-md-1 col-lg-1">
+                                        <i class="bi bi-geo-alt-fill"></i>
+                                    </div>
+                                    <div class="col-md-11 col-lg-10">
+                                        <p>7A Oko Awo street
+                                            off Adetokunbo Ademola Victoria
+                                            Island
+                                            Lagos.</p>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="ft-info1">
+                                <div class="row">
+                                    <div class="col-md-1">
+                                        <i class="bi bi-telephone-fill"></i>
+                                    </div>
+                                    <div class="col-md-10">
+                                        <p>+234-812 155 3959
+                                            +234-908 647 7777</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="ft-info1">
+                                <div class="row">
+                                    <div class="col-md-1">
+                                        <i class="bi bi-envelope-fill"></i>
+                                    </div>
+                                    <div class="col-md-10">
+                                        <p>info@miter.org</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="mid">
-                <div class="bi bi-envelope-fill icon"></div>
-                <div>
-                    info@miter.org
+            <div class="copyright">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <p><i class="bi bi-c-circle"></i>2025 Miter. All
+                                rights
+                                reserved</p>
+                        </div>
+                        <div class="col-lg-4">
+                            Privacy policy | Terms & Condition
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div> -->
+        </footer>
     </body>
 </html>
